<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.LandingActivity"
    android:background="@color/colorPrimary"
    android:layout_marginBottom="@dimen/activity_bottom_margin">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

<!--        <androidx.fragment.app.FragmentContainerView-->
<!--            android:id="@+id/fcv_profile"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:name="com.droiddevstar.historyline.fragments.ProfileFragment" />-->

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimary"
                app:cardBackgroundColor="@color/colorPrimary">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/activity_vertical_margin">

                <TextView
                        android:id="@+id/tv_event_to_insert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/after_start_you_gonna_sort"
                        android:textSize="20sp"
                        android:padding="20dp"
                        android:textColor="@color/textColorWhite" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search"
            android:text="@string/search"
            style="@style/PrimaryButton"
            app:backgroundTint="@color/submitButtonColor"
            android:visibility="gone"/> <!--REMOVE THIS BUTTON-->

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                android:text="@string/start"
                style="@style/PrimaryButton"
                app:backgroundTint="@color/submitButtonColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:text="@string/share"
            style="@style/PrimaryButton"
            app:backgroundTint="@color/submitButtonColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_rate"
            android:text="@string/rate"
            style="@style/PrimaryButton"
            app:backgroundTint="@color/submitButtonColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings"
            android:text="@string/settings"
            style="@style/PrimaryButton"
            app:backgroundTint="@color/submitButtonColor" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_exit"
                android:text="@string/exit"
                style="@style/PrimaryButton"
                app:backgroundTint="@color/submitButtonColor" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>