<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

    <ScrollView
            android:id="@+id/sv_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/gdpr_title"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.4"
                        android:text="@string/gdpr_main_text"
                        android:textColor="@android:color/black"
                        android:textColorLink="@color/primaryTextColor" />

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/ll_button_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="15dp"
                            android:text="@string/gdpr_agree"
                            android:textAllCaps="true"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:gravity="center_horizontal"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/gdpr_disagree"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:lineSpacingMultiplier="1.4"
                            android:text="@string/gdpr_understand"
                            android:textColor="@android:color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>