<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".activities.YouWinActivity"
        android:background="@color/colorAmountsFontGreen">

    <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textColor="@color/textColorWhite" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorAmountsFontGreen"
            app:cardBackgroundColor="@color/colorAmountsFontGreen">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                    android:id="@+id/tv_event_to_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_win"
                    android:textSize="20sp"
                    android:padding="20dp"
                    android:textColor="@color/textColorWhite" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play_again"
            android:text="@string/play_again"
            style="@style/PrimaryButton"
            app:backgroundTint="@color/submitButtonColor" />

</androidx.appcompat.widget.LinearLayoutCompat>