<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_marginBottom="50dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:scaleType="fitStart"
        android:src="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/sv_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/gdpr_title"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/gdpr_agree_text"
                android:textColor="@android:color/black"
                android:textColorLink="@color/colorPrimary" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="5dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/gdpr_close"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>