<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".activities.MainActivity"
        android:background="@color/forgotPasswordButtonText">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin">

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/correct_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAmountsFontGreen"
                android:background="@color/yellow" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_correct_count"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAmountsFontGreen"
                android:textStyle="bold"
                android:background="@color/yellow" />

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/fail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorRed"
                android:background="@color/yellow" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fail_count"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorRed"
                android:textStyle="bold"
                android:background="@color/yellow" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_now_this_event"
            android:layout_margin="@dimen/activity_vertical_margin" />

    <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/yellow"
            app:cardBackgroundColor="@color/yellow">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_event_to_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Event To insert test"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="20dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sorted_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="50dp" />

</androidx.appcompat.widget.LinearLayoutCompat>